[gd_scene load_steps=8 format=3 uid="uid://c0hvltjdip61f"]

[ext_resource type="Script" uid="uid://c0181dcofga70" path="res://Assets/World/WorldMain.gd" id="1_4lhai"]
[ext_resource type="PackedScene" uid="uid://bk6ihg1vf71uf" path="res://Assets/Character/Player.tscn" id="1_ur16q"]
[ext_resource type="Environment" uid="uid://ns2gq60t8sp1" path="res://Assets/World/Environments/WorldMainEnvironment.tres" id="2_m5iry"]
[ext_resource type="Texture2D" uid="uid://dx2blvlx1qx1" path="res://Resources/Image/map/Map001_detailed.png" id="5_61s7l"]
[ext_resource type="PackedScene" uid="uid://dqyequp22c8rg" path="res://Assets/World/Location/_ZhuShan/_ScenesPackage.tscn" id="7_ort8i"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qoha8"]
albedo_texture = ExtResource("5_61s7l")
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_l72iu"]
size = Vector2(200, 200)

[node name="World" type="Node3D"]
script = ExtResource("1_4lhai")
global_time = 46500
metadata/Dim = "Overworld"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_m5iry")

[node name="SunAxis" type="Node3D" parent="WorldEnvironment"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="SunVisual" type="DirectionalLight3D" parent="WorldEnvironment/SunAxis"]
transform = Transform3D(-0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, -0.866025, 0, 0, 0)
shadow_enabled = true
shadow_bias = 0.0
directional_shadow_blend_splits = true
sky_mode = 2

[node name="SunLight" type="DirectionalLight3D" parent="WorldEnvironment/SunAxis"]
transform = Transform3D(-0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, -0.866025, 0, 0, 0)
light_color = Color(1, 1, 0.937255, 1)
shadow_enabled = true
shadow_bias = 0.01
shadow_normal_bias = 0.01
directional_shadow_mode = 1
directional_shadow_blend_splits = true
sky_mode = 1

[node name="Player" parent="." instance=ExtResource("1_ur16q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="PlayerCam" parent="Player" index="3"]
current = true

[node name="Map" type="MeshInstance3D" parent="."]
transform = Transform3D(12288, 0, 0, 0, 12288, 0, 0, 0, 12288, -4352, -40, 4352)
visible = false
material_override = SubResource("StandardMaterial3D_qoha8")
mesh = SubResource("PlaneMesh_l72iu")

[node name="ScenesPackage" parent="." instance=ExtResource("7_ort8i")]

[connection signal="SetSdfgi" from="Player/Pause_menu/Options" to="." method="_on_options_set_sdfgi"]

[editable path="Player"]
[editable path="Player/HudHotbar"]
[editable path="Player/Pause_menu"]
[editable path="Player/Pause_menu/Options"]
